--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A template for Jest with describe-context-it pattern",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest index.test.js --watchAll --detectOpenHandles --forceExit"
   },
   "keywords": [
     "jest",
